unpackaged/main/default/objects/n2de__cls_Field__c/n2de__cls_Field__c.object-meta.xml
<CustomObject>
    <label>Classifier field</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classifier fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>