unpackaged/main/default/objects/n2de__cls_Field__c/fields/n2de__Classifier_object__c.field-meta.xml
<CustomField>
    <fullName>n2de__Classifier_object__c</fullName>
    <label>Classifier object</label>
    <referenceTo>n2de__cls_Object__c</referenceTo>
    <relationshipLabel>Classifier fields</relationshipLabel>
    <relationshipName>Classifier_fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>