unpackaged/main/default/objects/n2de__cls_Field__c/fields/n2de__Data_type__c.field-meta.xml
<CustomField>
    <fullName>n2de__Data_type__c</fullName>
    <description>Data type to clean from e.g. Domain, Phone, State, Zip</description>
    <label>Data type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>