unpackaged/main/default/objects/n2de__cls_Field__c/fields/n2de__Resolve_to__c.field-meta.xml
<CustomField>
    <fullName>n2de__Resolve_to__c</fullName>
    <description>Level the field should be cleaned/resolved to e.g. for territories, this is country/state/zip</description>
    <label>Resolve to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>